--- a/packages/pagePiling.js/index.html
+++ b/packages/pagePiling.js/index.html
@@ -192,7 +192,7 @@
 		<option selected>更多效果</option> 
 		<option value="backgrounds.html">backgrounds</option> 
 		<option value="callbacks.html">callbacks</option> 
-		<option value="Index.html">Index</option> 
+		<option value="index.html">Index</option> 
 		<option value="horizontalScroll.html">horizontalScroll</option> 
 		<option value="looping.html">looping</option> 
 		<option value="noAnchors.html">noAnchors</option> 
