--- a/packages/vertical-fixed-navigation/index.html
+++ b/packages/vertical-fixed-navigation/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Vertical Fixed Navigation #2 | CodyHouse</title>
+	<title>Vertical Fixed Navigation</title>
 </head>
 <body>
 <nav class="cd-vertical-nav">
@@ -26,7 +26,7 @@
 
 <section id="section1" class="cd-section">
 	<div class="content-wrapper">
-		<h1>Vertical Fixed Navigation <b>#2</b></h1>
+		<h1>Vertical Fixed Navigation</h1>
 		<a href="#section2" class="cd-scroll-down cd-image-replace">scroll down</a>
 	</div>
 </section><!-- cd-section -->
