--- a/packages/sticky-footers/index.html
+++ b/packages/sticky-footers/index.html
@@ -7,7 +7,7 @@
     <title>使用 Flexbox 制作粘性页脚</title>
 
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
 </head>
 
